--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,15 @@
           th:text="${post.spec.title}"
         ></a>
       </li>
+      <li>
+        <h5 th:text="${post.spec.slug}"></h5>
+        -
+        <h5 th:text="${post.spec.owner}"></h5>
+        -
+        <h5 th:text="${post.spec.publishTime}"></h5>
+        -
+        <h5 th:text="${post.spec.categirues}"></h5>
+      </li>
     </ul>
     <a th:if="${posts.hasPrevious()}" th:href="@{${posts.prevUrl}}">上一页</a>
     <a th:if="${posts.hasNext()}" th:href="@{${posts.nextUrl}}">下一页</a>
