--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <a th:text="${post.spec.publishTime}"></a>
         <br>
         <article>
-          <h1 th:text="${post.spec.title}"></h1>
+          <div th:utext="${post.content.content}"> </div>
         </article>
         aaa
       </li>
