--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,6 @@
         -
         <a th:text="${post.spec.publishTime}"></a>
         <br>
-        <article>
-          <div th:utext="${post.content.content}"> </div>
-        </article>
         aaa
       </li>
     </ul>
@@ -27,5 +24,8 @@
     <a th:if="${posts.hasNext()}" th:href="@{${posts.nextUrl}}">下一页</a>
   </th:block>
 
-  
+  <th:block th:fragment="content">
+    <h1 th:text="${post.spec.title}"></h1>
+    <article th:utext="${post.content.content}"></article>
+  </th:block>
 </html>
